--- a/css/style.css
+++ b/css/style.css
@@ -1,48 +1,81 @@
 #about {
   height: 100vh;
-  background: darkslategrey url(ccafecc5cac95d014c682aa0e3361c40.jpg) no-repeat center/cover; }
+  background-image: url(/assets/tlo.jpg);
+}
 
 .container {
   width: 100%;
   max-width: 1200px;
   left: 0;
   right: 0;
-  margin: 0 auto; }
-  .container .row::before, .container .row::after {
-    content: "";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden; }
-  .container .row [class*='col-'] {
-    float: left;
-    width: 100%; }
-  @media (max-width: 640px) {
-    .container .row .col-m-1 {
-      width: 16.66667%; }
-    .container .row .col-m-2 {
-      width: 33.33333%; }
-    .container .row .col-m-3 {
-      width: 50%; }
-    .container .row .col-m-4 {
-      width: 66.66667%; }
-    .container .row .col-m-5 {
-      width: 83.33333%; }
-    .container .row .col-m-6 {
-      width: 100%; } }
-  @media (min-width: 640px) {
-    .container .row .col-d-1 {
-      width: 16.66667%; }
-    .container .row .col-d-2 {
-      width: 33.33333%; }
-    .container .row .col-d-3 {
-      width: 50%; }
-    .container .row .col-d-4 {
-      width: 66.66667%; }
-    .container .row .col-d-5 {
-      width: 83.33333%; }
-    .container .row .col-d-6 {
-      width: 100%; } }
+  margin: 0 auto;
+}
+
+.container .row::before,
+.container .row::after {
+  content: "";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+.container .row [class*='col-'] {
+  float: left;
+  width: 100%;
+}
+
+@media (max-width: 640px) {
+  .container .row .col-m-1 {
+    width: 16.66667%;
+  }
+
+  .container .row .col-m-2 {
+    width: 33.33333%;
+  }
+
+  .container .row .col-m-3 {
+    width: 50%;
+  }
+
+  .container .row .col-m-4 {
+    width: 66.66667%;
+  }
+
+  .container .row .col-m-5 {
+    width: 83.33333%;
+  }
+
+  .container .row .col-m-6 {
+    width: 100%;
+  }
+}
+
+@media (min-width: 640px) {
+  .container .row .col-d-1 {
+    width: 16.66667%;
+  }
+
+  .container .row .col-d-2 {
+    width: 33.33333%;
+  }
+
+  .container .row .col-d-3 {
+    width: 50%;
+  }
+
+  .container .row .col-d-4 {
+    width: 66.66667%;
+  }
+
+  .container .row .col-d-5 {
+    width: 83.33333%;
+  }
+
+  .container .row .col-d-6 {
+    width: 100%;
+  }
+}
 
 header {
   font-weight: bold;
@@ -50,12 +83,16 @@ header {
   line-height: 50px;
   text-align: center;
   position: fixed;
-  top: 0; }
-  @media (min-width: 640px) {
-    header {
-      background-position: bottom;
-      min-height: 75px;
-      line-height: 75px; } }
+  top: 0;
+}
+
+@media (min-width: 640px) {
+  header {
+    background-position: bottom;
+    min-height: 75px;
+    line-height: 75px;
+  }
+}
 
 /*
 	HTML5 Reset :: style.css
@@ -67,36 +104,121 @@ header {
 	and the HTML5 Boilerplate	:: http://html5boilerplate.com
 
 -------------------------------------------------------------------------------*/
+
 /* Let's default this puppy out
 -------------------------------------------------------------------------------*/
-html, body, body div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, abbr, address, cite, code, del, dfn, em, img, ins, kbd, q, samp, small, strong, sub, sup, var, b, i, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, figure, footer, header, menu, nav, section, time, mark, audio, video, details, summary {
+
+html,
+body,
+body div,
+span,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+abbr,
+address,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+samp,
+small,
+strong,
+sub,
+sup,
+var,
+b,
+i,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+figure,
+footer,
+header,
+menu,
+nav,
+section,
+time,
+mark,
+audio,
+video,
+details,
+summary {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font-weight: normal;
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
-main, article, aside, figure, footer, header, nav, section, details, summary {
-  display: block; }
+main,
+article,
+aside,
+figure,
+footer,
+header,
+nav,
+section,
+details,
+summary {
+  display: block;
+}
 
 /* Handle box-sizing while better addressing child elements:
    http://css-tricks.com/inheriting-box-sizing-probably-slightly-better-best-practice/ */
+
 html {
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 *,
 *:before,
 *:after {
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 /* consider resetting the default cursor: https://gist.github.com/murtaugh/5247154 */
+
 /* Responsive images and other embedded objects */
+
 /* if you don't have full control over `img` tags (if you have to overcome attributes), consider adding height: auto */
+
 img,
 object,
 embed {
-  max-width: 100%; }
+  max-width: 100%;
+}
 
 /*
    Note: keeping IMG here will cause problems if you're using foreground images as sprites.
@@ -107,52 +229,68 @@ embed {
 		max-width: none;
 }
 */
+
 /* force a vertical scrollbar to prevent a jumpy page */
+
 html {
-  overflow-y: scroll; }
+  overflow-y: scroll;
+}
 
 /* we use a lot of ULs that aren't bulleted.
 	you'll have to restore the bullets within content,
 	which is fine because they're probably customized anyway */
-ul {
-  list-style: none; }
 
-blockquote, q {
-  quotes: none; }
+ul {
+  list-style: none;
+}
+
+blockquote,
+q {
+  quotes: none;
+}
 
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
   content: '';
-  content: none; }
+  content: none;
+}
 
 a {
   margin: 0;
   padding: 0;
   font-size: 100%;
   vertical-align: baseline;
-  background: transparent; }
+  background: transparent;
+}
 
 del {
-  text-decoration: line-through; }
+  text-decoration: line-through;
+}
 
-abbr[title], dfn[title] {
+abbr[title],
+dfn[title] {
   border-bottom: 1px dotted #000;
-  cursor: help; }
+  cursor: help;
+}
 
 /* tables still need cellspacing="0" in the markup */
+
 table {
   border-collapse: separate;
-  border-spacing: 0; }
+  border-spacing: 0;
+}
 
 th {
   font-weight: bold;
-  vertical-align: bottom; }
+  vertical-align: bottom;
+}
 
 td {
   font-weight: normal;
-  vertical-align: top; }
+  vertical-align: top;
+}
 
 hr {
   display: block;
@@ -160,10 +298,13 @@ hr {
   border: 0;
   border-top: 1px solid #ccc;
   margin: 1em 0;
-  padding: 0; }
+  padding: 0;
+}
 
-input, select {
-  vertical-align: middle; }
+input,
+select {
+  vertical-align: middle;
+}
 
 pre {
   white-space: pre;
@@ -173,126 +314,196 @@ pre {
   white-space: pre-line;
   /* CSS 3 (and 2.1 as well, actually) */
   word-wrap: break-word;
-  /* IE */ }
+  /* IE */
+}
 
 input[type="radio"] {
-  vertical-align: text-bottom; }
+  vertical-align: text-bottom;
+}
 
 input[type="checkbox"] {
-  vertical-align: bottom; }
+  vertical-align: bottom;
+}
 
 .ie7 input[type="checkbox"] {
-  vertical-align: baseline; }
+  vertical-align: baseline;
+}
 
 .ie6 input {
-  vertical-align: text-bottom; }
+  vertical-align: text-bottom;
+}
 
-select, input, textarea {
-  font: 99% sans-serif; }
+select,
+input,
+textarea {
+  font: 99% sans-serif;
+}
 
 table {
   font-size: inherit;
-  font: 100%; }
+  font: 100%;
+}
 
 small {
-  font-size: 85%; }
+  font-size: 85%;
+}
 
 strong {
-  font-weight: bold; }
+  font-weight: bold;
+}
 
-td, td img {
-  vertical-align: top; }
+td,
+td img {
+  vertical-align: top;
+}
 
 /* Make sure sup and sub don't mess with your line-heights http://gist.github.com/413930 */
-sub, sup {
+
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
-  position: relative; }
+  position: relative;
+}
 
 sup {
-  top: -0.5em; }
+  top: -0.5em;
+}
 
 sub {
-  bottom: -0.25em; }
+  bottom: -0.25em;
+}
 
 /* standardize any monospaced elements */
-pre, code, kbd, samp {
-  font-family: monospace, sans-serif; }
+
+pre,
+code,
+kbd,
+samp {
+  font-family: monospace, sans-serif;
+}
 
 /* hand cursor on clickable elements */
+
 .clickable,
 label,
 input[type=button],
 input[type=submit],
 input[type=file],
 button {
-  cursor: pointer; }
+  cursor: pointer;
+}
 
 /* Webkit browsers add a 2px margin outside the chrome of form elements */
-button, input, select, textarea {
-  margin: 0; }
+
+button,
+input,
+select,
+textarea {
+  margin: 0;
+}
 
 /* make buttons play nice in IE */
+
 button,
 input[type=button] {
   width: auto;
-  overflow: visible; }
+  overflow: visible;
+}
 
 /* scale images in IE7 more attractively */
+
 .ie7 img {
-  -ms-interpolation-mode: bicubic; }
+  -ms-interpolation-mode: bicubic;
+}
 
 /* prevent BG image flicker upon hover
    (commented out as usage is rare, and the filter syntax messes with some pre-processors)
 .ie6 html {filter: expression(document.execCommand("BackgroundImageCache", false, true));}
 */
+
 /* let's clear some floats */
+
 .clearfix:after {
   content: " ";
   display: block;
-  clear: both; }
+  clear: both;
+}
 
 .container {
   width: 100%;
   max-width: 1200px;
   left: 0;
   right: 0;
-  margin: 0 auto; }
-  .container .row::before, .container .row::after {
-    content: "";
-    display: block;
-    height: 0;
-    clear: both;
-    visibility: hidden; }
-  .container .row [class*='col-'] {
-    float: left;
-    width: 100%; }
-  @media (max-width: 640px) {
-    .container .row .col-m-1 {
-      width: 16.66667%; }
-    .container .row .col-m-2 {
-      width: 33.33333%; }
-    .container .row .col-m-3 {
-      width: 50%; }
-    .container .row .col-m-4 {
-      width: 66.66667%; }
-    .container .row .col-m-5 {
-      width: 83.33333%; }
-    .container .row .col-m-6 {
-      width: 100%; } }
-  @media (min-width: 640px) {
-    .container .row .col-d-1 {
-      width: 16.66667%; }
-    .container .row .col-d-2 {
-      width: 33.33333%; }
-    .container .row .col-d-3 {
-      width: 50%; }
-    .container .row .col-d-4 {
-      width: 66.66667%; }
-    .container .row .col-d-5 {
-      width: 83.33333%; }
-    .container .row .col-d-6 {
-      width: 100%; } }
+  margin: 0 auto;
+}
+
+.container .row::before,
+.container .row::after {
+  content: "";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+.container .row [class*='col-'] {
+  float: left;
+  width: 100%;
+}
+
+@media (max-width: 640px) {
+  .container .row .col-m-1 {
+    width: 16.66667%;
+  }
+
+  .container .row .col-m-2 {
+    width: 33.33333%;
+  }
+
+  .container .row .col-m-3 {
+    width: 50%;
+  }
+
+  .container .row .col-m-4 {
+    width: 66.66667%;
+  }
+
+  .container .row .col-m-5 {
+    width: 83.33333%;
+  }
+
+  .container .row .col-m-6 {
+    width: 100%;
+  }
+}
+
+@media (min-width: 640px) {
+  .container .row .col-d-1 {
+    width: 16.66667%;
+  }
+
+  .container .row .col-d-2 {
+    width: 33.33333%;
+  }
+
+  .container .row .col-d-3 {
+    width: 50%;
+  }
+
+  .container .row .col-d-4 {
+    width: 66.66667%;
+  }
+
+  .container .row .col-d-5 {
+    width: 83.33333%;
+  }
+
+  .container .row .col-d-6 {
+    width: 100%;
+  }
+}
 
 * {
-  font-family: 'Open Sans', sans-serif; }
+  font-family: 'Open Sans', sans-serif;
+}
