--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,9 +1,10 @@
-@import 'body';
+@import 'slider';
 @import 'footer';
 @import 'header';
 @import "reset";
 @import "grid";
 @import "sections";
+@import "animation";
 @import "variables";
 
 *{
