--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -3,46 +3,54 @@
 
 header {
   height: 100vh;
-  min-width: 1300px;
   width: 100vw;
   background-image: url("../images/tlo.jpg");
   background-color: $mainColor;
   background-position: top center;
   background-size: cover;
   color: $colorText;
-  text-align: center;
+  .hamburger{
+    line-height: 50px;
+    background: rgba(255,255,255, 0.5);
+    @include desktop{
+      display: none;
+    };
+  }
   nav {
     position: fixed;
     background: $mainColor;
     z-index: 1;
     display: none;
-    @include desktop {
-      display: block !important;
-    }
+
     ul {
+      @include desktop{
+        display: flex;
+        //justify-content: space-around;
+        //justify-content: space-between;
+      }
       li {
-        font-weight: bold;
-        min-height: 20px;
+        min-height: 30px;
         font-size: 15px;
+        text-transform: uppercase;
         a{
           color: $colorText;
           text-decoration: none;
-          //text-underline: none;
           &:hover > a {
             color: $colorText;
           }
         }
         @include desktop {
-          padding-right: 5%;
-          font-size: 24px;
-          display: inline-block;
-          width: (90%/6);
+          font-size: 20px;
+          min-height: 50px;
+          width: (78%/6);
+          border: 1px solid red;
         }
       }
 
     }
   }
   #about{
+
     h1{
       font-weight: bold;
       font-family: 'Dancing Script', cursive;
@@ -58,7 +66,7 @@ header {
       position: absolute;
       font-family: 'Dancing Script', cursive;
       bottom: 20%;
-      left: 20%;
+      left: 25%;
       font-size: 25px;
       font-weight: bold;
       @include desktop{
