--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -40,26 +40,37 @@
           font-weight: bold;
           color: $colorText2;
           text-align: center;
-          @include desktop{
+          @include desktop {
             height: 150px;
             vertical-align: middle;
             font-size: 35px;
-            a{
-              border: 2px solid $mainColor;
-              background: rgba(255,255,255, 0.25);
-              width: 40%;
-              height: 50%;
-              text-decoration: none;
-              position: absolute;
-              top: 200%;
-              //padding-bottom: 50px;
-              &:link{
-                color: $colorText2;
-              }
-              &:visited{
-                color: $colorText2;
-              }
+          }
+          a{
+            text-decoration: none;
+            font-weight: bold;
+            &:link{
+              color: $colorText;
             }
+            &:visited{
+              color: $colorText;
+            }
+
+            //a{
+            //  border: 2px solid $mainColor;
+            //  background: rgba(255,255,255, 0.25);
+            //  width: 40%;
+            //  height: 50%;
+            //  text-decoration: none;
+            //  position: absolute;
+            //  top: 200%;
+            //  //padding-bottom: 50px;
+            //  &:link{
+            //    color: $colorText2;
+            //  }
+            //  &:visited{
+            //    color: $colorText2;
+            //  }
+            //}
           }
         }
       }
