--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,3 +1,5 @@
 $colorText: white;
 $colorText2: black;
 $mainColor: #050f0c;
+$fontItalics: 'Dancing Script', cursive;
+$fontRegular: 'Open Sans', sans-serif;
