--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,16 +1,17 @@
+@import "variables";
+@import "grid";
 @import 'slider';
 @import 'footer';
 @import 'header';
 @import "reset";
-@import "grid";
 @import "health";
 @import "sections";
 @import "animation";
 @import "products";
-@import "variables";
 @import "perfume";
 @import "contact";
 @import "local";
+@import "opening";
 
 *{
 font-family: $fontRegular;
