--- a/css/style.css
+++ b/css/style.css
@@ -151,7 +151,6 @@
 
 footer {
   height: 50px;
-  background-color: #081712;
 }
 
 footer .row.col-d-6.col-m-6 {
@@ -166,7 +165,7 @@ footer .row.col-d-6.col-m-6 span:nth-of-type(2) {
 
 header {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background-image: url(/assets/tlo.jpg);
   background-color: #050f0c;
   background-position: top center;
@@ -174,8 +173,14 @@ header {
   color: white;
 }
 
+header.home.container {
+  max-width: none;
+}
+
 header .hamburger {
   line-height: 50px;
+  position: relative;
+  z-index: 3;
   text-align: center;
   background: rgba(255, 255, 255, 0.5);
   cursor: pointer;
@@ -189,8 +194,8 @@ header .hamburger {
 
 header nav {
   position: fixed;
+  z-index: 4;
   background: #050f0c;
-  z-index: 1;
   display: none;
   text-transform: uppercase;
 }
@@ -202,6 +207,7 @@ header nav ul {
 @media (min-width: 640px) {
   header nav ul {
     display: flex;
+    flex: 1 0 auto;
   }
 }
 
@@ -210,6 +216,7 @@ header nav ul li {
   font-size: 15px;
   cursor: pointer;
   padding-top: 5px;
+  flex-grow: 1;
 }
 
 header nav ul li:hover {
@@ -228,7 +235,6 @@ header nav ul li a {
     font-size: 20px;
     min-height: 50px;
     width: 13%;
-    border: 1px solid red;
   }
 }
 
@@ -598,80 +604,6 @@ input[type=button] {
   clear: both;
 }
 
-.container {
-  width: 100%;
-  max-width: 1000px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-}
-
-.container .row::before,
-.container .row::after {
-  content: "";
-  display: block;
-  height: 0;
-  clear: both;
-  visibility: hidden;
-}
-
-.container .row [class*='col-'] {
-  float: left;
-  width: 100%;
-}
-
-@media (max-width: 640px) {
-  .container .row .col-m-1 {
-    width: 16.66667%;
-  }
-
-  .container .row .col-m-2 {
-    width: 33.33333%;
-  }
-
-  .container .row .col-m-3 {
-    width: 50%;
-  }
-
-  .container .row .col-m-4 {
-    width: 66.66667%;
-  }
-
-  .container .row .col-m-5 {
-    width: 83.33333%;
-  }
-
-  .container .row .col-m-6 {
-    width: 100%;
-  }
-}
-
-@media (min-width: 640px) {
-  .container .row .col-d-1 {
-    width: 16.66667%;
-  }
-
-  .container .row .col-d-2 {
-    width: 33.33333%;
-  }
-
-  .container .row .col-d-3 {
-    width: 50%;
-  }
-
-  .container .row .col-d-4 {
-    width: 66.66667%;
-  }
-
-  .container .row .col-d-5 {
-    width: 83.33333%;
-  }
-
-  .container .row .col-d-6 {
-    width: 100%;
-  }
-}
-
 #health {
   margin: 100px auto;
   text-align: center;
@@ -690,13 +622,13 @@ input[type=button] {
   padding: 10px;
 }
 
+#health div div a:hover {
+  background-color: #18483a;
+}
+
 @media (min-width: 640px) {
   #health div div a {
     font-size: 20px;
-  }
-
-  #health div div a:hover {
-    background-color: #18483a;
   }
 }
 
@@ -901,13 +833,13 @@ div.slide:nth-of-type(5) {
   padding: 10px;
 }
 
+#perfume div div a:hover {
+  background-color: #18483a;
+}
+
 @media (min-width: 640px) {
   #perfume div div a {
     font-size: 20px;
-  }
-
-  #perfume div div a:hover {
-    background-color: #18483a;
   }
 }
 
@@ -977,13 +909,13 @@ div.slide:nth-of-type(5) {
   padding: 10px;
 }
 
+#contact form input:last-of-type:hover {
+  background-color: #18483a;
+}
+
 @media (min-width: 640px) {
   #contact form input:last-of-type {
     font-size: 20px;
-  }
-
-  #contact form input:last-of-type:hover {
-    background-color: #18483a;
   }
 }
 
@@ -1006,6 +938,103 @@ div.slide:nth-of-type(5) {
 @media (min-width: 640px) {
   #local iframe {
     height: 400px;
+  }
+}
+
+#opening {
+  position: fixed;
+  z-index: 6;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  animation-name: welcome;
+  animation-duration: 4s;
+  animation-fill-mode: forwards;
+  display: block;
+}
+
+#opening #flower {
+  background-image: url(/assets/transparentFlower.png);
+  height: 500px;
+  width: 500px;
+  position: relative;
+  margin: 0 auto;
+  background-size: 55%;
+  background-repeat: no-repeat;
+  background-position: center;
+  animation-name: welcome, rotation;
+  animation-duration: 4s, 4s;
+  animation-fill-mode: forwards;
+}
+
+@media (min-width: 640px) {
+  #opening #flower {
+    background-size: 100%;
+  }
+}
+
+#opening span {
+  position: absolute;
+  font-family: "Dancing Script", cursive;
+  color: darkred;
+  font-weight: bold;
+  font-size: 40px;
+  top: 80%;
+  right: 30%;
+}
+
+@media (min-width: 640px) {
+  #opening span {
+    font-size: 70px;
+    top: 80%;
+    right: 40%;
+  }
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0);
+    opacity: 1;
+    display: block;
+  }
+
+  99% {
+    opacity: 1;
+  }
+
+  100% {
+    display: none;
+    transform: rotate(360deg);
+    opacity: 0;
+  }
+}
+
+@keyframes welcome {
+  0% {
+    background-color: black;
+    display: block;
+    opacity: 1;
+  }
+
+  99% {
+    background-color: black;
+    display: block;
+    opacity: 1;
+    z-index: 5;
+  }
+
+  100% {
+    background-color: black;
+    display: none;
+    opacity: 0;
+    z-index: 2;
+  }
+}
+
+@media (min-width: 640px) {
+  #opening .flower {
+    background-size: auto;
   }
 }
 
