--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -1,15 +1,33 @@
 #contact {
+  margin: 50px auto;
+  @include desktop{
+    margin: 200px auto;
+  }
   h2 {
     text-align: center;
+    color: darkred;
+    text-shadow: 1px -2px 5px black;
     font-family: $fontItalics;
     font-size: 30px;
     padding-bottom: 5%;
     @include desktop{
-      font-size: 40px;
+      font-size: 50px;
       font-weight: bold;
     }
   }
+  h3{
+    color: darkred;
+    text-align: center;
+    line-height: 400%;
+    font-size: 25px;
+    font-weight: bold;
+    @include desktop{
+      font-size: 40px;
+    }
+  }
   form {
+    font-size: 25px;
+    line-height: 150%;
     width: 100%;
     height: 100%;
     text-align: center;
@@ -29,8 +47,11 @@
         font-size: 15px;
         font-weight: bold;
         padding: 10px;
+        position: relative;
+        z-index: 3;
         &:hover{
           background-color: lighten($mainColor,15%);
+          cursor: pointer;
         }
         @include desktop{
           font-size: 20px;
@@ -40,6 +61,38 @@
     textarea {
       width: 90%;
       height: 30vh;
+    }
+  }
+  .social{
+    width: 400px;
+    height: 400px;
+    margin: 15% 0 15% 0;
+    @include desktop{
+      width: 100%;
+      height: 400px;
+      margin: 15% 0 0 15%;
+    }
+    color: $colorText;
+    border-radius: 100px 100px 100px 100px;
+    -moz-border-radius: 100px 100px 100px 100px;
+    -webkit-border-radius: 100px 100px 100px 100px;
+    border: 5px solid $colorText;
+  }
+  .fa {
+    font-size: 80px;
+    padding: 25px;
+    @include desktop{
+      font-size: 100px;
+      padding: 35px;
+    }
+    &:first-of-type {
+    color: #3b5998;
+    }
+    &:nth-of-type(2){
+      color: #00aced;
+    }
+    &:last-of-type{
+      color: #cc181e;
     }
   }
 }
