--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -20,7 +20,7 @@ header {
     cursor: pointer;
     @include desktop{
       display: none;
-    };
+    }
   }
   nav {
     position: fixed;
@@ -56,7 +56,6 @@ header {
           width: (78%/6);
         }
       }
-
     }
   }
 
@@ -64,24 +63,28 @@ header {
 
     h1{
       font-weight: bold;
+      color: $colorText2;
+      text-shadow: 20px -3px 25px white;
       font-family: 'Dancing Script', cursive;
-      font-size: 30px;
+      font-size: 50px;
       text-align: center;
       padding-top: 18%;
       position: relative;
       @include desktop{
-        font-size: 50px;
+        font-size: 70px;
       }
     }
     h2{
       position: absolute;
       font-family: $fontItalics;
+      color: $colorText2;
+      text-shadow: 20px -3px 25px white;
       bottom: 20%;
-      left: 25%;
-      font-size: 25px;
+      left: 20%;
+      font-size: 35px;
       font-weight: bold;
       @include desktop{
-        font-size: 45px;
+        font-size: 55px;
       }
     }
   }
