--- a/scss/_health.scss
+++ b/scss/_health.scss
@@ -1,17 +1,26 @@
 #health{
-  margin: 100px auto;
+  margin: 50px auto;
   text-align: center;
+  @include desktop{
+    margin: 150px auto
+  }
   div div{
     padding-right: 5%;
     a{
       color: $colorText;
       text-decoration: none;
       background-color: lighten($mainColor,8%);
+      -webkit-box-shadow: 0px 5px 10px 3px $colorText;
+      -moz-box-shadow: 0px 5px 10px 3px $colorText;
+      box-shadow: 0px 5px 10px 3px $colorText;
       font-size: 15px;
       font-weight: bold;
       padding: 10px;
+      position: relative;
+      z-index: 3;
       &:hover{
         background-color: lighten($mainColor,15%);
+        cursor: pointer;
       }
       @include desktop{
         font-size: 20px;
