--- a/scss/_products.scss
+++ b/scss/_products.scss
@@ -1,16 +1,19 @@
 #products {
-  margin: 100px auto;
+  margin: 50px auto;
+  @include desktop{
+    margin: 150px auto
+  }
   text-align: left;
   div div:nth-of-type(2) {
     padding-left: 8%;
     ul {
-      list-style: circle;
+      list-style: square;
       text-align: left;
       li{
-        font-size: 15px;
+        font-size: 20px;
         padding-bottom: 5%;
         @include desktop{
-          font-size: 20px;
+          font-size: 30px;
         }
       }
     }
