--- a/scss/_sections.scss
+++ b/scss/_sections.scss
@@ -7,9 +7,11 @@ html{
   min-height: 400px;
 }
 
-#contact{
+#contact, #local{
+  position: relative;
+  z-index: 3;
   height: 650px;
   @include desktop{
-    height: 500px;
+    height: 450px;
   }
 }
