--- a/scss/_slider.scss
+++ b/scss/_slider.scss
@@ -1,10 +1,8 @@
 
 #slider{
-  margin-top: 25px;
-  margin-bottom: 25px;
+  margin: 50px auto;
   @include desktop{
-    margin-top: 100px;
-    margin-bottom: 100px;
+    margin: 150px auto;
   }
   height: 200px;
   @include desktop{
@@ -37,6 +35,7 @@
           left: 25%;
           font-weight: bold;
           color: $colorText2;
+          text-shadow: 1px -2px 5px black;
           text-align: center;
           @include desktop {
             height: 150px;
